--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
         <link href="style.css" rel="stylesheet">
       </head> 
     <body>
-      <header>
-        <h1 id="title">freeCodeCamp Survey Form</h1>
-        <p>Thank you for taking the time to help us improve the platform </p>
-      </header>
 
       <main>
+        <h1 id="title">freeCodeCamp Survey Form</h1>
+        <h2>Thank you for taking the time to help us improve the platform </h2>
         <form id="survey-form">
           <div class="form-group">
             <label id="name-label" for="name">Name</label>
@@ -42,7 +40,7 @@
           </div>
           
           <div>
-            <label id="age-label" for="age">Age <span>(Optional)</span></label>
+            <label id="number-label" for="age">Age <span>(Optional)</span></label>
             <input
               type="number"
               name="age"
@@ -71,7 +69,7 @@
             <label id="recommend-label" for="recommend">
               Which option best describes your current role?
             </label>
-            <input type="radio"
+            <input type="radio">
           </div>
 
 Would you recommend freeCodeCamp to a friend?
